# server.js
@@ -5,7 +5,7 @@ const app = express();
 
 const port = process.env.PORT || 8080;
 
-app.use(bodyParser.json());   // This will make create user function to work
+app.use(bodyParser.json());
 app.use((req, res, next) => {
     res.setHeader('Access-Control-Allow-Origin', '*');
     res.setHeader(
@@ -16,17 +16,12 @@ app.use((req, res, next) => {
     next();
 });
 
+const studentRouter = require('./routes/student');
+const teacherRouter = require('./routes/teacher');
+
 app.use('/', require('./routes'));
-
-const usersRouter = require('./routes/users'); // added for Mongodb
-
-const studentRouter = require('./routes/student'); // added for the "student" collection
-const teacherRouter = require('./routes/teacher'); // added for the "teacher" collection
-
-app.use('/users', usersRouter); // added for Mongodb
-app.use('/student', studentRouter); // added for the "student" collection
-app.use('/teacher', teacherRouter); // added for the "teacher" collection
-
+app.use('/student', studentRouter);
+app.use('/teacher', teacherRouter);
 
 mongodb.initDb((err) => {
     if (err) {
